--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "pg": "^8.7.3"
+  },
   "name": "ds304",
   "version": "1.0.0",
   "description": "Usado para aula de DS304 Cotuca Unicamp",
